--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,12 @@ spring.datasource.username=user
 spring.datasource.password=pass
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.connection-timeout=30000
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.ClickHouseDialect
 
 springdoc.swagger-ui.path=/swagger-ui.html
+
+spring.flyway.validate-on-migrate=true
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.schemas=analytics
+logging.level.org.flywaydb=DEBUG
